--- a/style.css
+++ b/style.css
@@ -1,2 +1,30 @@
-header{background-color: blueviolet;
-color: black;}
+*{
+margin: 0;
+padding: 0;
+}
+
+header {
+  background-color: blue;
+  color: brown;
+  height: 150px;
+}
+
+header h1 {
+  text-align: center;
+  font-size: 50px;
+ 
+}
+
+h1 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+nav ul {
+  list-style: nome;
+  text-align: center;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0 15px;
+}
