--- a/style.css
+++ b/style.css
@@ -32,4 +32,7 @@ img {
   width: 100px;
   height: 300px;
   object-fit: cover;
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
